5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1577_1332.log
== TEST (2019-03-19 19:25:50) 
-- CODE:
aresta =a
area = 3/2*3a**2**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3a**2**0.5
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:26:30) 
-- CODE:
aresta =a
area = 1.5*3a**2**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 1.5*3a**2**0.5
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:27:27) 
-- CODE:
aresta =a
area = 1.5* 3a **2 **0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 1.5* 3a **2 **0.5
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:28:40) 
-- CODE:
aresta = 5
area = 1.5*3*aresta**2**0.5
 
print(round(area, 4))
-- OUTPUT:
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:28:51) 
-- CODE:
aresta = 5
area = 1.5*3*aresta**2**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.143572
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
43.8233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:02) 
-- CODE:
aresta = 5
area = 1.5*3*aresta**2**0.5
 
print(round(area, 4))
-- OUTPUT:
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:17) 
-- CODE:
aresta = 5
area = 3/2*3*aresta**2**0.5
 
print(round(area, 4))
-- OUTPUT:
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:34) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2**0.5)
 
print(round(area, 4))
-- OUTPUT:
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:52) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:29:55) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.195542
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:30:41) 
-- CODE:
aresta = 5
area = 3/2*(((3*aresta)**2)**0.5)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:32:30) 
-- CODE:
aresta = 5
area = 3/2*((3*aresta)**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:32:43) 
-- CODE:
aresta = 5
area = 3/2*((3*aresta)**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.314795
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:41:42) 
-- CODE:
aresta = 5
area = 3/2*3**2*aresta
 
print(round(area, 4))
-- OUTPUT:
67.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:41:45) 
-- CODE:
aresta = 5
area = 3/2*3**2*aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.215215
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
67.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:42:14) 
-- CODE:
aresta = 5
area = 3/2*(3**2)*aresta
 
print(round(area, 4))
-- OUTPUT:
67.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:42:15) 
-- CODE:
aresta = 5
area = 3/2*(3**2)*aresta
 
print(round(area, 4))
-- OUTPUT:
67.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:43:03) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:43:05) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.191588
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
